# sigprop

./: .gitignore  MODULE.bazel  compiler_test.sh  particle.sp  particle.yaml  profile_summary.py  pyproject.toml  run_benchmarks.sh
benchmarks/: BUILD  build_benchmarks.sh  dacapo_end_to_end.sh  dacapo_offline_powercap.sh  dacapo_offline_yuca.sh  dacapo_online_powercap.sh  dacapo_online_yuca.sh  renaissance_end_to_end.sh  renaissance_offline_powercap.sh  renaissance_offline_yuca.sh  renaissance_online_powercap.sh  renaissance_online_yuca.sh  run_benchmark.py  run_dacapo.sh  run_dacapo_baseline.sh  run_renaissance.sh  run_renaissance_baseline.sh  sunflow.sh
benchmarks/java/charcoal/benchmarks/: BUILD  CharcoalDacapoCallback.java  CharcoalRenaissancePlugin.java
benchmarks/java/yuca/benchmarks/: BUILD  BenchmarkHelper.java  ProfilerUtil.java  ThermalZoneCooldown.java  YucaBenchmarkModule.java  YucaDacapoCallback.java  YucaRenaissancePlugin.java
benchmarks/scripts/: run_dacapo.sh  run_renaissance.sh
compiler/python/charcoal/compiler/: __main__.py  generator.py  parser.py
src/c/charcoal/util/: BUILD  (+1 more)
src/java/charcoal/: BUILD  ComposableSignal.java  ComposedSignal.java  MappableSignal.java  SinkSignal.java  SourceSignal.java
src/java/sigprop/: AsyncComposableSignal.java  AsyncMappableSignal.java  BUILD  ComposableSignal.java  MappableSignal.java  Signal.java  SinkSignal.java  SourceSignal.java
src/java/sigprop2/: BUILD  SinkSignal.java  SourceSignal.java
src/java/sigprop3/: BUILD  ComposableSignal.java  MappableSignal.java  SinkSignal.java  SourceSignal.java
(+267 files in other folders)
