bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "rules_java", version = "8.9.0")
# bazel_dep(name = "rules_jvm_external", version = "6.6")
# bazel_dep(name = "rules_proto", version = "7.1.0")
# bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
# bazel_dep(name = "rules_proto_grpc_java", version = "5.0.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "dacapo",
    urls = ["https://clerk-deps.s3.amazonaws.com/dacapo.zip"],
    # urls = ["https://download.dacapobench.org/chopin/dacapo-23.11-MR2-chopin.zip"],
)
